k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ha
  labels:
    name: demo-ha
    environment: production
