k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-ha
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
